# fleaxj

./: .gitignore  Cargo.toml  conf.toml  generate_model.sh
src/: conf.rs  lib.rs  main.rs
src/conf/: mod.rs
src/database/: mod.rs
src/database/model/: items.rs  mod.rs  prelude.rs  users.rs
src/router/: mod.rs
src/util/: inspect.rs  lazy.rs  mod.rs
