[package]
name = "fleaxj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# log
log    = "0.4.17"
# tracing
tracing = "0.1.36"
tracing-appender = { version = "0.2.2", features = ["parking_lot"] }
tracing-subscriber = { version = "0.3.15", features = ["fmt", "json"] }
# opentelemetry to trace
opentelemetry = "0.18.0"
opentelemetry-jaeger = "0.17.0"
tracing-opentelemetry = "0.18.0"
# orm
sea-orm = { version = "0.9.2", features = ["runtime-tokio-rustls", "sqlx-mysql"] }
# async runtime
tokio = { version = "1.21.1", features = ["full"] }
# actix
actix       = "0.13.0"
actix-web   = "4.2.1"
actix-files = "0.6.2"
# serde
toml       = "0.5.9"
serde      = "1.0.145"
serde_json = "1.0.85"
serde_derive = "1.0.145"
# lazy
once_cell  = "1.15.0"
async-oncecell = "0.2.0"
